--- a/index.html
+++ b/index.html
@@ -122,28 +122,28 @@
 
 			<div class="box">
 				<ul>
-					<li><a href="finish/index.html">Главная</a></li>
-					<li><a href="finish/shop-jap.html">Каталог Япония</a></li>
-					<li><a href="finish/shop-kor.html">Каталог Корея</a></li>
-					<li><a href="finish/shop-gruz.html">Каталог спецтехники</a></li>
-					<li><a href="finish/product-jap.html">Карточка Япония</a></li>
-					<li><a href="finish/product-kor.html">Карточка Корея</a></li>
-					<li><a href="finish/product-gruz.html">Карточка спецтехника</a></li>
-					<li><a href="finish/services.html">Услуги</a></li>
-					<li><a href="finish/auction-jap.html">Автомобили с аукционов Японии </a></li>
-					<li><a href="finish/auction-china.html">Автомобили с аукционов Китая </a></li>
-					<li><a href="finish/auction-kor.html">Автомобили с аукционов Кореи </a></li>
-					<li><a href="finish/auction-gruz.html">Спецтехника с аукционов Японии </a></li>
-					<li><a href="finish/auction-poshlina.html">Ввоз автомобиля под полную пошлину </a></li>
-					<li><a href="finish/auction-vladivostok.html">Доставка автомобилей из Владивостока </a></li>
-					<li><a href="finish/company.html">Компания </a></li>
-					<li><a href="finish/exp.html">Опыт</a></li>
-					<li><a href="finish/card-exp.html">Карточка Опыт</a></li>
-					<li><a href="finish/reviews.html">Отзывы</a></li>
-					<li><a href="finish/news.html">Новости</a></li>
-					<li><a href="finish/contacts.html">Контакты</a></li>
-					<li><a href="finish/video.html">Видео</a></li>
-					<li><a href="finish/warning.html">Осторожно мошенники!</a></li>
+					<li><a href="dist/index.html">Главная</a></li>
+					<li><a href="dist/shop-jap.html">Каталог Япония</a></li>
+					<li><a href="dist/shop-kor.html">Каталог Корея</a></li>
+					<li><a href="dist/shop-gruz.html">Каталог спецтехники</a></li>
+					<li><a href="dist/product-jap.html">Карточка Япония</a></li>
+					<li><a href="dist/product-kor.html">Карточка Корея</a></li>
+					<li><a href="dist/product-gruz.html">Карточка спецтехника</a></li>
+					<li><a href="dist/services.html">Услуги</a></li>
+					<li><a href="dist/auction-jap.html">Автомобили с аукционов Японии </a></li>
+					<li><a href="dist/auction-china.html">Автомобили с аукционов Китая </a></li>
+					<li><a href="dist/auction-kor.html">Автомобили с аукционов Кореи </a></li>
+					<li><a href="dist/auction-gruz.html">Спецтехника с аукционов Японии </a></li>
+					<li><a href="dist/auction-poshlina.html">Ввоз автомобиля под полную пошлину </a></li>
+					<li><a href="dist/auction-vladivostok.html">Доставка автомобилей из Владивостока </a></li>
+					<li><a href="dist/company.html">Компания </a></li>
+					<li><a href="dist/exp.html">Опыт</a></li>
+					<li><a href="dist/card-exp.html">Карточка Опыт</a></li>
+					<li><a href="dist/reviews.html">Отзывы</a></li>
+					<li><a href="dist/news.html">Новости</a></li>
+					<li><a href="dist/contacts.html">Контакты</a></li>
+					<li><a href="dist/video.html">Видео</a></li>
+					<li><a href="dist/warning.html">Осторожно мошенники!</a></li>
 
 					<!-- <br>
 					<li><a href="popups.html">Модальные окна</a></li> -->
