--- a/src/html/company/catalog.html
+++ b/src/html/company/catalog.html
@@ -1,7 +1,9 @@
 <section class="sect">
   <div class="container">
-    <h2 class="h2 reviewsTitle pb-2 border-b-gray-4 border-b-gray-4-sm-none sectHead">
-      Каталог автомобилей и спецтехники с аукционов
+    <h2>
+      <a class="h2 reviewsTitle pb-2 border-b-gray-4 border-b-gray-4-sm-none sectHead" href="#">
+        Каталог автомобилей и спецтехники с аукционов
+      </a>      
     </h2>
 
     <div class="row mt-4 catalogGrid">
