--- a/src/html/news.html
+++ b/src/html/news.html
@@ -2,7 +2,7 @@
   <div class="container">
 
     <div class="d-flex justify-content-between align-items-center sectHead">
-      <h2 class="h2 reviewsTitle pb-2 border-b-gray-4">Новости и статьи</h2>
+      <h2><a class="h2 reviewsTitle pb-2 border-b-gray-4" href="#">Новости и статьи</a></h2>
       <div class="sliderNav gap-2 d-none d-lg-flex">
         @@include('components/slider-nav.html',{})
       </div><!-- /sliderNav -->
@@ -23,7 +23,6 @@
         <div class="swiper-slide catalogSlide">
           @@include('catalog/news-card-2.html',{})
         </div><!-- /catalogSlide -->
-
 
       </div>
     </div>
