--- a/src/html/services/privoz.html
+++ b/src/html/services/privoz.html
@@ -2,7 +2,9 @@
   <div class="container">
 
     <div class="d-flex justify-content-between align-items-center sectHead">
-      <h2 class="h2 reviewsTitle pb-2 border-b-gray-4">Привезенные авто и техника</h2>
+      <h2>
+        <a class="h2 reviewsTitle pb-2 border-b-gray-4" href="#">Привезенные авто и техника</a>        
+      </h2>
       <div class="sliderNav gap-2 d-none d-lg-flex">
         @@include('../components/slider-nav.html',{})
       </div><!-- /sliderNav -->
