--- a/src/html/video.html
+++ b/src/html/video.html
@@ -4,7 +4,7 @@
     <div class="d-flex justify-content-between align-items-end sectHead">
       <div class="d-block">
         <div class="d-flex gap-1 mb-4">
-          <h2 class="h2 reviewsTitle pb-2 border-b-gray-4 text--white">Наши видеообзоры</h2>
+          <h2><a class="h2 reviewsTitle pb-2 border-b-gray-4 text--white" href="#">Наши видеообзоры</a></h2>
           <div class="d-none d-lg-flex align-items-center gap-2 socials">
             <a href="#" class="socialLink" target="_blank">
               <img src="@img/admin/socials/icon-1.svg" alt="icon">
