--- a/src/html/news-page/related.html
+++ b/src/html/news-page/related.html
@@ -1,7 +1,11 @@
 <section class="catalogSliderW sect">
   <div class="container">
     <div class="d-flex justify-content-between align-items-center sectHead">
-      <h2 class="h2 reviewsTitle pb-2 border-b-gray-4">Каталог авто с аукционов Японии </h2>
+      <h2>
+        <a class="h2 reviewsTitle pb-2 border-b-gray-4" href="#">
+          Каталог авто с аукционов Японии
+        </a>
+      </h2>
       <div class="sliderNav gap-2 d-none d-lg-flex">
         @@include('../components/slider-nav.html',{})
       </div><!-- /sliderNav -->
