--- a/src/html/product/related.html
+++ b/src/html/product/related.html
@@ -1,7 +1,7 @@
 <section class="catalogSliderW sect">
   <div class="container">
     <div class="d-flex justify-content-between align-items-center sectHead">
-      <h2 class="h2 reviewsTitle pb-2 border-b-gray-4">Подобные автомобили</h2>
+      <h2 class="h2 reviewsTitle pb-2">Подобные автомобили</h2>
       <div class="sliderNav gap-2 d-none d-lg-flex">
         @@include('../components/slider-nav.html',{})
       </div><!-- /sliderNav -->
