--- a/src/html/reviews.html
+++ b/src/html/reviews.html
@@ -2,7 +2,7 @@
   <div class="container">
 
     <div class="d-flex justify-content-between align-items-center sectHead">
-      <h2 class="h2 reviewsTitle pb-2 border-b-gray-4">Отзывы</h2>
+      <h2><a class="h2 reviewsTitle pb-2 border-b-gray-4" href="#">Отзывы</a></h2>
       <div class="sliderNav gap-2 d-none d-lg-flex">
         @@include('components/slider-nav.html',{})
       </div><!-- /sliderNav -->
