--- a/src/html/warning/content.html
+++ b/src/html/warning/content.html
@@ -190,14 +190,16 @@
             <form action="#" class="form">
               <div class="row">
                 <div class="col-12 mb-2">
-                  <div class="inputW">
-                    <input type="text" class="formInput formInput--sm" placeholder="Ваше имя">
+                  <div class="inputW form-floating">
+                    <input type="text" class="form-control formInput formInput--sm" placeholder="Ваше имя" id="warninkText">
+                    <label for="warninkText">Ваше имя</label>
                     <button class="clear" type="button"><img src="@img/icons/clear.svg" alt="clear"></button>
                   </div>
                 </div>
                 <div class="co-12 mb-2">
-                  <div class="inputW">
-                    <input type="tel" class="formInput formInput--sm" placeholder="Телефон">
+                  <div class="inputW form-floating">
+                    <input type="tel" class="form-control formInput formInput--sm" placeholder="Телефон" id="warningPhone">
+                    <label for="warningPhone">Телефон</label>
                     <button class="clear" type="button"><img src="@img/icons/clear.svg" alt="clear"></button>
                   </div>
                 </div>
