--- a/src/html/modal.html
+++ b/src/html/modal.html
@@ -17,13 +17,15 @@
     </p>
     <div class="modalForm">
 
-      <div class="inputW mb-2">
-        <input type="text" class="formInput" placeholder="Ваше имя">
+      <div class="inputW form-floating mb-2">
+        <input type="text" class="form-control formInput" placeholder="Ваше имя" id="modalOrderText">
+        <label for="modalOrderText">Ваше имя</label>
         <button class="clear" type="button"><img src="@img/icons/clear.svg" alt="clear"></button>
       </div>
 
-      <div class="inputW mb-2">
-        <input type="tel" class="formInput" placeholder="Телефон">
+      <div class="inputW form-floating mb-2">
+        <input type="tel" class="form-control formInput" placeholder="Телефон" id="modalOrderPhone">
+        <label for="modalOrderPhone">Телефон</label>
         <button class="clear" type="button"><img src="@img/icons/clear.svg" alt="clear"></button>
       </div>
 
