--- a/src/html/exp/filter.html
+++ b/src/html/exp/filter.html
@@ -34,54 +34,50 @@
   </div>
   <div class="row">
     <div class="col-lg-4 col-xl-3 mb-2 mb-lg-4">
-      <div class="inputW">
-        <div class="mb-2 fw-medium inputName d-none d-lg-block">Марка</div>
-        <select name="marka" id="marka" class="formSelect">
-          <option class="d-none" value="default">Марка</option>
+      <div class="inputW form-floating">
+        <select name="marka" id="marka" class="formSelect form-select">
           <option value="any">Любая</option>
           <option value="vw">VW</option>
           <option value="audi">Audi</option>
         </select>
+        <label for="marka">Марка</label>
       </div>
     </div>
     <div class="col-lg-4 col-xl-3 mb-2 mb-lg-4">
-      <div class="inputW">
-        <div class="mb-2 fw-medium inputName d-none d-lg-block">Модель</div>
-        <select name="model" id="model" class="formSelect">
-          <option class="d-none" value="default">Модель</option>
+      <div class="inputW form-floating">
+        <select name="model" id="model" class="formSelect form-select">
           <option value="any">Любая</option>
           <option value="100">100</option>
           <option value="80">80</option>
         </select>
+        <label for="model">Модель</label>
       </div>
     </div>
 
     <div class="col-lg-4 col-xl-3 mb-2 mb-lg-4 inputW-sm-hide">
       <div class="inputW">
-        <div class="mb-2 fw-medium inputName d-none d-lg-block">Год</div>
         <div class="inputDualW d-flex">
-          <div class="inputDual">
-            <span class="fw-medium">От</span>
-            <input type="text" placeholder="Год от">
+          <div class="inputDual form-floating">
+            <input class="form-control" type="text" placeholder="Год от" id="god_ot">
+            <label for="god_ot">Год от</label>
           </div>
-          <div class="inputDual">
-            <span class="fw-medium">До</span>
-            <input type="text" placeholder="Год до">
+          <div class="inputDual form-floating">
+            <input class="form-control" type="text" placeholder="Год до" id="god_do">
+            <label for="god_do">Год до</label>
           </div>
         </div>
       </div>
     </div>
     <div class="col-lg-4 col-xl-3 mb-2 mb-lg-4 inputW-sm-hide inputW-lg-hide">
-      <div class="inputW">
-        <div class="mb-2 fw-medium inputName d-none d-lg-block">Цена</div>
+      <div class="inputW">     
         <div class="inputDualW d-flex">
-          <div class="inputDual">
-            <span class="fw-medium">От</span>
-            <input type="text" placeholder="Цена от">
+          <div class="inputDual form-floating">
+            <input class="form-control" type="text" placeholder="Цена от" id="cena_ot">
+            <label for="cena_ot">Цена от</label>
           </div>
-          <div class="inputDual">
-            <span class="fw-medium">До</span>
-            <input type="text" placeholder="Цена до">
+          <div class="inputDual form-floating">
+            <input class="form-control" type="text" placeholder="Цена до" id="cena_do">
+            <label for="cena_do">Цена до</label>
           </div>
         </div>
       </div>
