--- a/src/html/product/auction-gruz.html
+++ b/src/html/product/auction-gruz.html
@@ -1,4 +1,4 @@
-<section class="sect py-0">
+<section class="sect py-0 auctionSect">
   <div class="container">
     <div class="row">
       <div class="col-lg-7 col-xl-8">
